new swing app icon and title, added MacOS app generation script